# mirage-lang

./: .clang-format  .gitignore  CMakeLists.txt  Justfile  README.md
docs/: control-flow.html  error-handling.html  functions.html  getting-started.html  grammar.html  grammar.md  index.html  modules.html  spec.md  structs-and-types.html  style.css  types.html
editors/vscode/: package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: mirage.tmLanguage.json
examples/: 001_initial.mir  dictionary.mir  example_default_undefined.mir  example_defer.mir  example_enum.mir  example_fnptr2.mir  example_fnptr3.mir  example_struct_init.mir  example_tagged_union.mir  example_try.mir  example_union.mir  io.mir  mem.mir  start.mir  test_io.mir  test_new.mir  vector.mir
examples/builder/: builder.mir
examples/compiler/: diagnostics.mir  io.mir  main.mir  memory.mir  std.mir
examples/compiler/diagnostics/: diagnostics.mir
examples/compiler/io/: io.mir
examples/compiler/memory/: memory.mir
examples/compiler/source/: source.mir
examples/compiler/std/: dict_test.mir  dictionary.mir  ext.mir  vector.mir
examples/dictionary/: main.mir
examples/example_array_init/: main.mir
examples/example_asi_deref/: main.mir
examples/example_default_undefined/: main.mir
examples/example_defer/: main.mir
examples/example_enum/: main.mir
examples/example_enum_def/: main.mir
examples/example_error_typestate/: main.mir
examples/example_error_union/: main.mir
examples/example_fmt/: main.mir
examples/example_fnptr/: main.mir
examples/example_fnptr2/: main.mir
examples/example_fnptr3/: main.mir
examples/example_fnptr4/: main.mir
examples/example_impl/: main.mir
examples/example_return_ok_err/: main.mir
examples/example_scalar_match/: main.mir
examples/example_slice_cast_ptr/: main.mir
examples/example_slice_to_array/: main.mir
examples/example_struct_init/: main.mir
examples/example_struct_positional_init/: main.mir
examples/example_tagged_union/: main.mir
examples/example_tagged_union_scalar_payload/: main.mir
examples/example_traits/: main.mir
examples/example_try/: main.mir
examples/example_union/: main.mir
examples/example_varargs/: main.mir
examples/fmt/: fmt.mir
examples/io/: io.mir
examples/lexer/: lexer.mir  token.mir
examples/mem/: mem.mir
examples/range_test/: main.mir
examples/start/: main.mir
examples/string/: string.mir
examples/test_io/: main.mir
examples/vector/: vector.mir
src/: main.cpp
src/Compiler/: Ast.hpp  SourceLocation.hpp  Token.cpp  Token.hpp  ast.cpp  ast.hpp  ast_parser.cpp  ast_parser.hpp  diagnostic_engine.cpp  diagnostic_engine.hpp  lexer.cpp  lexer.hpp  module_resolver.cpp  module_resolver.hpp  resolved_type.hpp  sema.cpp  sema.hpp  sema_check.cpp  sema_declare.cpp  source_location.hpp  source_manager.hpp  symbol_table.hpp  token.cpp  token.hpp  type_resolver.cpp  value_resolver.cpp
src/Compiler/Ast/: Decl.cpp  Decl.hpp  Expr.cpp  Expr.hpp  Parser.cpp  Parser.hpp  Stmt.cpp  Stmt.hpp  Type.cpp  Type.hpp
src/Compiler/Diagnostics/: DiagnosticEngine.cpp  DiagnosticEngine.hpp
src/Compiler/Lexer/: Lexer.cpp  Lexer.hpp
src/Compiler/Sema/: ResolvedType.hpp  Sema.cpp  Sema.hpp
src/Compiler/Sema/types/: type_resolver.cpp
src/compiler/: ast.cpp  ast.hpp  ast_parser.cpp  ast_parser.hpp  codegen.cpp  codegen.hpp  diagnostic_engine.cpp  diagnostic_engine.hpp  lexer.cpp  lexer.hpp  module_resolver.cpp  module_resolver.hpp  resolved_type.hpp  sema.cpp  sema.hpp  sema_check.cpp  sema_declare.cpp  source_location.hpp  source_manager.cpp  source_manager.hpp  symbol_table.hpp  token.cpp  token.hpp  type_resolver.cpp  value_resolver.cpp
src/lsp/: analysis.cpp  analysis.hpp  main.cpp  server.cpp  server.hpp  transport.cpp  transport.hpp  type_printer.cpp  type_printer.hpp  uri.cpp  uri.hpp
src/lsp/handlers/: common.cpp  common.hpp  definition.cpp  definition.hpp  diagnostics.cpp  diagnostics.hpp  hover.cpp  hover.hpp
tests/: lexer_asi_test.cpp  lsp_smoke_test.py
tests/lsp_fixtures/bad_import_fixture/: main.mir
tests/lsp_fixtures/error_fixture/: main.mir
tests/lsp_fixtures/multi_fixture/: main.mir
tests/lsp_fixtures/multi_fixture/greet/: greet.mir
tests/lsp_fixtures/regression_fixture/: main.mir
